[package]
name = "kyrie-cache"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.43" }
redis = { version = "0.29", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
r2d2_redis = "0.14"
rmp-serde = "1.3"
thiserror = "2.0"

[lints]
workspace = true
