[package]
name = "kyrie-config"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

[lints]
workspace = true
