[package]
name = "kyrie-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
kyrie-bot = { path = "../kyrie-bot" }

tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"

[lints]
workspace = true
