[package]
name = "kyrie-db"

version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0"

[lints]
workspace = true
